--- a/index.html
+++ b/index.html
@@ -4,10 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>SolarShare — Frontend</title>
-
-  <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <!-- Leaflet CSS -->
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
   <style>
     :root{--accent:#0d6f3a}
@@ -34,42 +31,19 @@
 <div class="container my-4">
   <div class="row g-3">
     <div class="col-lg-4">
-      <!-- Submission Card -->
       <div class="card p-3">
         <h5 class="mb-2">List Your Roof / Space</h5>
         <p class="form-note">Enter basic details — the platform will estimate suitability & CO₂ savings.</p>
         <form id="submitForm">
-          <div class="mb-2">
-            <label class="form-label">Name</label>
-            <input required id="ownerName" class="form-control" placeholder="Your name">
+          <div class="mb-2"><label class="form-label">Name</label><input required id="ownerName" class="form-control" placeholder="Your name"></div>
+          <div class="mb-2"><label class="form-label">Location (City / Pin code)</label><input required id="location" class="form-control" placeholder="Bengaluru, 560001"></div>
+          <div class="mb-2"><label class="form-label">Area (sq. ft)</label><input required id="area" type="number" class="form-control" placeholder="e.g. 200"></div>
+          <div class="mb-2"><label class="form-label">Avg sunlight hours/day</label><input required id="sunHours" type="number" step="0.1" class="form-control" placeholder="e.g. 6.5"></div>
+          <div class="mb-2"><label class="form-label">Shade (Yes/No)</label>
+            <select id="shade" class="form-select"><option value="no">No</option><option value="partial">Partial</option><option value="yes">Yes</option></select>
           </div>
-          <div class="mb-2">
-            <label class="form-label">Location (City / Pin code)</label>
-            <input required id="location" class="form-control" placeholder="Bengaluru, 560001">
-          </div>
-          <div class="mb-2">
-            <label class="form-label">Area (sq. ft)</label>
-            <input required id="area" type="number" class="form-control" placeholder="e.g. 200">
-          </div>
-          <div class="mb-2">
-            <label class="form-label">Avg sunlight hours/day</label>
-            <input required id="sunHours" type="number" step="0.1" class="form-control" placeholder="e.g. 6.5">
-          </div>
-          <div class="mb-2">
-            <label class="form-label">Shade (Yes/No)</label>
-            <select id="shade" class="form-select">
-              <option value="no">No</option>
-              <option value="partial">Partial</option>
-              <option value="yes">Yes</option>
-            </select>
-          </div>
-          <div class="mb-2">
-            <label class="form-label">Upload photo (optional)</label>
-            <input id="photo" type="file" accept="image/*" class="form-control">
-          </div>
-          <div class="d-grid">
-            <button class="btn btn-success">Submit Space</button>
-          </div>
+          <div class="mb-2"><label class="form-label">Upload photo (optional)</label><input id="photo" type="file" accept="image/*" class="form-control"></div>
+          <div class="d-grid"><button class="btn btn-success">Submit Space</button></div>
         </form>
 
         <hr>
@@ -80,7 +54,6 @@
         </ul>
       </div>
 
-      <!-- Marketplace Card -->
       <div class="card p-3 mt-3">
         <h6>Marketplace (Sample)</h6>
         <div id="marketplaceList" style="max-height:220px;overflow:auto"></div>
@@ -89,7 +62,6 @@
     </div>
 
     <div class="col-lg-8">
-      <!-- Map Card -->
       <div class="card p-3 mb-3">
         <div class="d-flex justify-content-between align-items-center mb-2">
           <h5 class="mb-0">Map & Suitability</h5>
@@ -99,25 +71,10 @@
       </div>
 
       <div class="row">
-        <div class="col-md-6">
-          <div class="card p-3 mb-3">
-            <h6>Latest Submission</h6>
-            <div id="latestCard">No submissions yet</div>
-          </div>
-        </div>
-        <div class="col-md-6">
-          <div class="card p-3 mb-3">
-            <h6>National Progress Snapshot</h6>
-            <div class="small-muted">Rooftops added: <span id="totalCount">0</span></div>
-            <div class="mt-2">
-              <div class="small-muted">Estimated total CO₂ saved / year</div>
-              <div class="h4" id="totalCO2">0 tCO₂</div>
-            </div>
-          </div>
-        </div>
+        <div class="col-md-6"><div class="card p-3 mb-3"><h6>Latest Submission</h6><div id="latestCard">No submissions yet</div></div></div>
+        <div class="col-md-6"><div class="card p-3 mb-3"><h6>National Progress Snapshot</h6><div class="small-muted">Rooftops added: <span id="totalCount">0</span></div><div class="mt-2"><div class="small-muted">Estimated total CO₂ saved / year</div><div class="h4" id="totalCO2">0 tCO₂</div></div></div></div>
       </div>
 
-      <!-- Charts -->
       <div class="card p-3">
         <h6>CO₂ & Energy Estimate (Simulated)</h6>
         <canvas id="summaryChart" height="120"></canvas>
@@ -130,113 +87,54 @@
 
 <footer class="text-center py-3 muted">SolarShare — demo frontend • Replace simulation with real services for production.</footer>
 
-<!-- Libraries -->
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/chart.js@4.3.0/dist/chart.umd.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
 <script>
-// --- In-memory data store (demo)
+// ---------- CONFIG ----------
 let submissions = [];
+const API_URL = 'https://script.google.com/macros/s/AKfycbx2dNtpGMwTZreq_NJhVViTRxS-kUrR7WQJdovYnvBmC1SegPZvMYGlXaUf2bLLjiE3-w/exec'; // <-- paste your Apps Script exec URL here
+const API_TOKEN = 'vinayak123';         // must match TOKEN in Apps Script
 
-// --- API config (replace with your deployed Apps Script URL)
-const API_URL = 'https://script.google.com/macros/s/AKfycbyO0EMJIbUvlMSTiq1QmgXiv7CyJ5ZKyde7IlPhsKH4CpK6iaIFDMkiGVj1-oBa3Nt-Gw/exec';
-const API_TOKEN = 'vinayak123'; // must match TOKEN in your Apps Script
-
-// --- Utilities
-function areaToKW(areaSqFt){
-  // rough: 100 sq ft ~ 1.5 kW peak
-  return Math.max(0.5, (areaSqFt/100)*1.5);
-}
-function annualKWh(kwPeak, sunHours){
-  // simplified: kW_peak * sunHours * 365 * performance_ratio
-  const pr = 0.75; // performance ratio
-  return Math.round(kwPeak * sunHours * 365 * pr);
-}
-function kWhToCO2(kwh){
-  // convert using grid emission factor ~0.82 kg CO2 per kWh (example for India - adjust in prod)
-  return Math.round((kwh * 0.82)/1000 * 100)/100; // tonnes CO2 per year
-}
+// ---------- Utilities ----------
+function areaToKW(areaSqFt){ return Math.max(0.5, (areaSqFt/100)*1.5); }
+function annualKWh(kwPeak, sunHours){ const pr=0.75; return Math.round(kwPeak * sunHours * 365 * pr); }
+function kWhToCO2(kwh){ return Math.round((kwh * 0.82)/1000 * 100)/100; }
 function suitabilityScore(area, sunHours, shade){
-  let score = 50;
-  score += Math.min(30, sunHours*5);
-  score += Math.min(20, (area/100)*2);
-  if(shade==='no') score += 10;
-  if(shade==='partial') score += 0;
-  if(shade==='yes') score -= 15;
+  let score = 50; score += Math.min(30, sunHours*5); score += Math.min(20, (area/100)*2);
+  if(shade==='no') score += 10; if(shade==='partial') score += 0; if(shade==='yes') score -= 15;
   return Math.max(0, Math.min(100, Math.round(score)));
 }
 function scoreLabel(score){
-  if(score>=75) return {label:'High', color:'green'};
-  if(score>=50) return {label:'Medium', color:'orange'};
-  return {label:'Low', color:'red'};
+  if(score>=75) return {label:'High', color:'green'}; if(score>=50) return {label:'Medium', color:'orange'}; return {label:'Low', color:'red'};
 }
 
-// ---------- CLIENT: fetch / post to Apps Script ----------
-
-// fetch submissions from Apps Script (GET)
+// ---------- Client API helpers ----------
 async function fetchSubmissionsFromAPI(){
   try{
     const url = `${API_URL}?token=${encodeURIComponent(API_TOKEN)}`;
     const res = await fetch(url);
-    if(!res.ok) throw new Error('Network response not ok');
-    const payload = await res.json(); // expects { success:true, data: [...] }
+    const text = await res.text();
+    let payload;
+    try { payload = JSON.parse(text); } catch(e){ throw new Error('Invalid JSON from API: '+text); }
     if(!payload.success) throw new Error(payload.error || 'API error');
-
-    // map incoming rows to our shape (be permissive about header casing)
-    submissions = payload.data.map(r => {
-      // normalize keys (try multiple possibilities)
-      const owner = r.owner || r.Owner || r.OwnerName || '';
-      const location = r.location || r.Location || '';
-      const area = Number(r.area || r.Area || r.AREA || 0);
-      const sunHours = Number(r.sunHours || r.SunHours || r.sun_hours || r['sunHours'] || 5);
-      const shade = r.shade || r.Shade || 'no';
-      const kw = Number(r.kw || r.KW || areaToKW(area));
-      const annual = Number(r.annual || r.Annual || r.ANNUAL || annualKWh(kw, sunHours));
-      const co2 = Number(r.co2 || r.CO2 || kWhToCO2(annual));
-      const score = Number(r.score || r.Score || suitabilityScore(area, sunHours, shade));
-      const timestamp = r.timestamp || r.Timestamp || '';
-      const lat = r.lat || r.Lat || null;
-      const lng = r.lng || r.Lng || null;
-      return { owner, location, area, sunHours, shade, kw, annual, co2, score, timestamp, lat, lng };
-    });
-
+    submissions = payload.data.map(normalizeRow);
     updateUI();
   }catch(err){
     console.warn('Could not load remote submissions:', err);
-    // keep demo/local data if API fails
   }
 }
-
-// post a new submission to Apps Script (POST)
 async function postSubmissionToAPI(entry){
   try{
     const res = await fetch(`${API_URL}?token=${encodeURIComponent(API_TOKEN)}`, {
-      method: 'POST',
-      headers: { 'Content-Type': 'application/json' },
-      body: JSON.stringify(entry)
+      method:'POST', headers:{'Content-Type':'application/json'}, body: JSON.stringify(entry)
     });
-    if(!res.ok) throw new Error('Network response not ok');
-    const payload = await res.json(); // expects { success:true, data: {...} }
+    const text = await res.text();
+    let payload;
+    try { payload = JSON.parse(text); } catch(e){ throw new Error('Invalid JSON from API: '+text); }
     if(!payload.success) throw new Error(payload.error || 'API error');
-    // payload.data should be returned row object from appendRow
-    // normalize similarly to fetch
-    const r = payload.data;
-    const saved = {
-      owner: r.owner || r.Owner || entry.owner,
-      location: r.location || r.Location || entry.location,
-      area: Number(r.area || r.Area || entry.area),
-      sunHours: Number(r.sunHours || r.SunHours || entry.sunHours),
-      shade: r.shade || r.Shade || entry.shade,
-      kw: Number(r.kw || r.KW || entry.kw),
-      annual: Number(r.annual || r.Annual || entry.annual),
-      co2: Number(r.co2 || r.CO2 || entry.co2),
-      score: Number(r.score || r.Score || entry.score),
-      timestamp: r.timestamp || new Date().toLocaleString(),
-      lat: r.lat || null,
-      lng: r.lng || null
-    };
-    // add newest first
+    const saved = normalizeRow(payload.data);
     submissions.unshift(saved);
     updateUI();
     return true;
@@ -245,24 +143,38 @@ async function postSubmissionToAPI(entry){
     return false;
   }
 }
+function normalizeRow(r){
+  return {
+    owner: r.owner || r.Owner || '',
+    location: r.location || r.Location || '',
+    area: Number(r.area || r.Area || 0),
+    sunHours: Number(r.sunHours || r.SunHours || r['sun_hours'] || 5),
+    shade: r.shade || r.Shade || 'no',
+    kw: Number(r.kw || r.KW || areaToKW(Number(r.area || 0))),
+    annual: Number(r.annual || r.Annual || 0),
+    co2: Number(r.co2 || r.CO2 || 0),
+    score: Number(r.score || r.Score || suitabilityScore(Number(r.area||0), Number(r.sunHours||5), r.shade || 'no')),
+    timestamp: r.timestamp || r.Timestamp || new Date().toLocaleString(),
+    lat: r.lat || r.Lat || null,
+    lng: r.lng || r.Lng || null
+  };
+}
 
-// --- Map setup
+// ---------- Map ----------
 const map = L.map('map').setView([20.5937,78.9629], 5);
-L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',{attribution:'©️ OpenStreetMap contributors'}).addTo(map);
+L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', { attribution:'©️ OpenStreetMap contributors' }).addTo(map);
 const markerLayer = L.layerGroup().addTo(map);
-
 function renderMarkers(){
   markerLayer.clearLayers();
   submissions.forEach(s=>{
     const color = scoreLabel(s.score).color;
-    const lat = s.lat || 20.5937;
-    const lng = s.lng || 78.9629;
-    const marker = L.circleMarker([lat, lng], {radius:10, color:color, weight:2, fillOpacity:0.7}).addTo(markerLayer);
+    const lat = s.lat || 20.5937; const lng = s.lng || 78.9629;
+    const marker = L.circleMarker([lat,lng], {radius:10, color:color, weight:2, fillOpacity:0.7}).addTo(markerLayer);
     marker.bindPopup(`<b>${s.owner}</b><br>${s.location}<br>Suitability: ${scoreLabel(s.score).label} (${s.score})<br>Est. kW: ${Number(s.kw).toFixed(2)} kW<br>Est. CO₂ saved: ${s.co2} t/yr`);
-  })
+  });
 }
 
-// --- Form handling
+// ---------- Form ----------
 const form = document.getElementById('submitForm');
 form.addEventListener('submit', async function(e){
   e.preventDefault();
@@ -272,7 +184,6 @@ form.addEventListener('submit', async function(e){
   const sunHours = Number(document.getElementById('sunHours').value);
   const shade = document.getElementById('shade').value;
 
-  // compute
   const kw = areaToKW(area);
   const annual = annualKWh(kw, sunHours);
   const co2 = kWhToCO2(annual);
@@ -280,10 +191,8 @@ form.addEventListener('submit', async function(e){
 
   const entry = { owner, location, area, sunHours, shade, kw, annual, co2, score };
 
-  // try saving to API
   const saved = await postSubmissionToAPI(entry);
   if(!saved){
-    // fallback: keep locally so user doesn't lose their entry
     console.warn('Saving to API failed — adding locally');
     const timestamp = new Date().toLocaleString();
     submissions.unshift({ ...entry, timestamp, lat:null, lng:null });
@@ -294,9 +203,8 @@ form.addEventListener('submit', async function(e){
   }
 });
 
-// --- UI updates
+// ---------- UI updates ----------
 function updateUI(){
-  // latest
   const latest = submissions[0];
   if(latest){
     const lbl = scoreLabel(latest.score);
@@ -311,7 +219,6 @@ function updateUI(){
     document.getElementById('latestCard').innerText = 'No submissions yet';
   }
 
-  // marketplace
   const market = document.getElementById('marketplaceList');
   market.innerHTML = '';
   submissions.slice(0,20).forEach((s,i)=>{
@@ -322,7 +229,6 @@ function updateUI(){
     market.appendChild(div);
   });
 
-  // totals
   const totalCO2 = submissions.reduce((acc,s)=>acc + Number(s.co2),0);
   document.getElementById('totalCO2').innerText = totalCO2.toFixed(2) + ' tCO₂';
   document.getElementById('totalCount').innerText = submissions.length;
@@ -331,7 +237,7 @@ function updateUI(){
   updateChart();
 }
 
-// --- Demo: sample data loader
+// ---------- Demo loader ----------
 document.getElementById('demoSample').addEventListener('click', ()=>{
   const sample = [
     {owner:'Ravi', location:'Bengaluru, 560001', area:200, sunHours:6.5, shade:'no'},
@@ -345,23 +251,21 @@ document.getElementById('demoSample').addEventListener('click', ()=>{
     const score = suitabilityScore(s.area, s.sunHours, s.shade);
     submissions.unshift({...s, kw, annual, co2, score, timestamp: new Date().toLocaleString(), lat:null, lng:null});
   });
-  // assign approximate lat/lng for demo markers
   submissions.forEach((s,i)=>{
-    if(i===0){s.lat=12.9716; s.lng=77.5946} // Bengaluru
-    if(i===1){s.lat=13.0827; s.lng=80.2707} // Chennai
-    if(i===2){s.lat=26.9124; s.lng=75.7873} // Jaipur
+    if(i===0){s.lat=12.9716; s.lng=77.5946}
+    if(i===1){s.lat=13.0827; s.lng=80.2707}
+    if(i===2){s.lat=26.9124; s.lng=75.7873}
   });
   updateUI();
 });
 
-// --- Chart.js summary
+// ---------- Chart ----------
 const ctx = document.getElementById('summaryChart').getContext('2d');
 const summaryChart = new Chart(ctx, {
   type: 'bar',
   data: {labels:[], datasets:[{label:'Estimated annual kWh', data:[], tension:0.4}]},
   options: {responsive:true, maintainAspectRatio:false, scales:{y:{beginAtZero:true}}}
 });
-
 function updateChart(){
   const top = submissions.slice(0,8);
   summaryChart.data.labels = top.map(s=>s.owner + ' • ' + (s.location || '').split(',')[0]);
@@ -369,10 +273,10 @@ function updateChart(){
   summaryChart.update();
 }
 
-// initial render
+// ---------- init ----------
 updateUI();
-// try load remote submissions (if API_URL configured)
-if(API_URL && !API_URL.includes('REPLACE_WITH_YOUR_DEPLOYED_URL')){
+// try loading remote (if API_URL is configured)
+if(API_URL && !API_URL.includes('<YOUR_EXEC_URL_HERE>')) {
   fetchSubmissionsFromAPI();
 }
 </script>
