Update API_URL check for remote loading

--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@ function updateChart(){
 // ---------- init ----------
 updateUI();
 // try loading remote (if API_URL is configured)
-if(API_URL && !API_URL.includes('<YOUR_EXEC_URL_HERE>')) {
+if(API_URL && !API_URL.includes('https://script.google.com/macros/s/AKfycbx2dNtpGMwTZreq_NJhVViTRxS-kUrR7WQJdovYnvBmC1SegPZvMYGlXaUf2bLLjiE3-w/exec')) {
   fetchSubmissionsFromAPI();
 }
 </script>
